# nnseismic

./: .gitignore  .gitmodules  main.py  nnseismic.yml  pyproject.toml  synthoseis.yml
.continue/rules/: effective-comments.md  general-best-practices.md  python-deep-learning.md  python-jupyter-data-visualization.md
config/: example.json  tagilsk1.json  tagilsk2.json  tagilsk3.json  test1.json  vankor1.json  vankor2.json  vankor3.json
data/models/: brine-sand_50_iter.pth  brine_50_iter.pth  brine_pl_vp_vs.pth  gas_pl_vp.pth  gas_sand_50_iter.pth  oil-sand_50_iter.pth  oil_PL_GG_50_iter.pth  oil_VP_50_iter.pth  oil_VS_50_iter.pth  oil_pl_vp_vs.pth  shale_50_iter.pth  shale_pl_vp_vs.pth  shale_v1.pth  shale_v1_50_iter.pth
src/: create-synthetic-data-tagilsk.ipynb  create-synthetic-data-v2.ipynb  create-synthetic-data.ipynb  get-rockphysics-tagilsk.ipynb  inspect-seismic-cube.py  predict_example.py  prepare-tagilsk-functions.ipynb  presentation graphics.ipynb  testing.ipynb  train-test-ult.ipynb  train-test.ipynb  view_results.ipynb
src/.ipynb_checkpoints/: Create data-checkpoint.ipynb
src/DNN/: ARCHITECTURE.md  dataset.py  infer.sh  large_volume_predictor.py  loss.py  lw_spacenet.py  lw_spacenet2.py  predict.py  predict_chunk.py  test_simple.py  train_lwspace.sh  ult_spacenet.py  volume_merger.py
src/RGTnet/: README.md  check_data_range.py  demo.ipynb  draw.py  infer.py  infer.sh  infer_space.sh  train.py  train.sh  train_space.sh  utils.py
src/util/: 3d_cube_viewer.py  data_augm.py  filehandler.py  gaussian_processes.py  gaussian_processes_sklearn.py  (+6 more)
(+21 files in other folders)
