[project]
name = "nnseismic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gpytorch>=1.13",
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
]
